<resources>
    <string name="app_name">简书</string>
    <string name="app_name_broken">简\n书</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_date_choose">DateChooseActivity</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_diary_list">DiaryListActivity</string>
    <string name="title_activity_diary_view">DiaryViewActivity</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="logo_name">简书</string>
    <string name="logo_slogan">回归书籍的本质，回归美好</string>

    <string name="navigation_drawer_open">打开菜单</string>
    <string name="navigation_drawer_close">关闭菜单</string>

    <string name="action_settings">设置</string>
    <string name="menu_favorite">收藏</string>
    <string name="menu_save">保存</string>
    <string name="menu_browser">在浏览器中打开</string>
    <string name="menu_more">菜单</string>

    <string name="note_edit_hint">对于这本书，你有什么想法，评价或者回忆。</string>
    <string name="write">撰</string>
    <string name="read">阅</string>
    <string name="setting">置</string>
    <string name="day">日</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="edit_title_hint">标题</string>
    <string name="edit_content_hint">讲述你的故事&#8230;</string>
    <string name="edit">辑</string>
    <string name="edit_save">存</string>
    <string name="share">享</string>
    <string name="account">账户</string>
    <string name="password">密码</string>
    <string name="edit_saving">保存中&#8230;</string>
    <string name="save_success">保存成功!</string>
    <string name="save_failure">保存失败&#8230;</string>
    <string name="want_to_save">是否要保存？</string>
    <string name="edit_content_not_null">抱歉，内容不能为空</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="do_you_want_to_delete_diary">确定要删除？</string>
    <string name="delete_diary_failure">删除失败，请重试</string>
    <string name="space_of_date_record">\n\n\n\n</string>
    <string name="space_of_date_record_end">\n\n</string>
    <string name="record">记</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="user_setting">设置</string>
    <string name="vertical_reading">竖排文字阅读</string>
    <string name="turn_on_home_image_poem">开启首页图片背景</string>
    <string name="customize_background_color">更换背景颜色</string>
    <string name="support_info">支持信息</string>
    <string name="account_info">账户</string>
    <string name="user_feedback">反馈</string>
    <string name="version_upgrade">版本升级</string>
    <string name="logout">注销</string>
    <string name="feedback_email_subject">关于&lt;简诗&gt;的二三意见</string>
    <string name="feedback_email_prefix">Hi,亲爱的简诗开发者们!\n&#160;&#160;&#160;&#160;我希望向亲们提出如下意见：</string>
    <string name="send_email">发送邮件</string>
    <string name="email_client_no_found">未找到任何邮箱客户端，请安装</string>
    <string name="please_choose_day">请选择日期</string>
    <string name="please_choose_month">请选择月份</string>
    <string name="illegal_choose_date">你所选择的日期不合法</string>
    <string name="current_version_code">当前：</string>

    <!--upgrade-->
    <string name="upgrade_title">小小的升级只为追求更好</string>
    <string name="checking_upgrade">升级检查中...</string>
    <string name="upgrade_info">新版本：%1$s； 更新信息：%2$s</string>
    <string name="upgrade">获取新体验</string>
    <string name="cancel">下次咯</string>
    <string name="current_newest_verion">您已经是最新版本啦！</string>
    <string name="go_to_setting_for_upgrading">记得去设置页面点击更新哦！</string>
    <!--upgrade end-->

    <!--account-->
    <string name="login">登录</string>
    <string name="logining">登录中</string>
    <string name="signup">注册</string>
    <string name="signuping">注册中</string>
    <string name="login_failure">用户名密码不匹配</string>
    <string name="signup_failure">注册失败</string>
    <string name="email_should_not_be_null">邮箱不能为空</string>
    <string name="password_should_not_be_null">密码不能为空</string>
    <string name="password_length_must_bigger_than_6">密码长度至少六位</string>
    <string name="wrong_email_format">邮箱格式不对</string>
    <string name="logout_ing">注销中</string>
    <string name="logout_warning_with_data_not_sync">确定要注销？你还有数据未同步，现在登出可能导致数据丢失。</string>
    <string name="invalid_token_force_logout">你的身份信息已经过期，被强制登出</string>
    <!--account ends-->


    <string name="jianshi_slogan_2">@string/logo_slogan</string>
    <!--logo ends-->

    <!--network error-->
    <string name="network_error">你的网络连接不正常，请检查</string>
    <string name="server_error">服务器打个盹，请稍后再试</string>
    <!--network error end-->

    <!--share-->
    <string name="share_failure">分享失败</string>
    <!--share error-->

    <!--pay developer-->
    <string name="copy_wechat_account">拷贝开发者微信账号</string>
    <string name="copy_alipay_account">拷贝开发者支付宝账号</string>
    <string name="refuse_pay">残忍拒绝</string>
    <string name="pay_developer">打赏</string>
    <string name="pay_developer_desc">赏开发者一杯咖啡呗</string>
    <string name="copy_successfully">拷贝成功</string>
</resources>
